fix: Remove gap under top UI elements

--- a/webclient/src/balloon.css
+++ b/webclient/src/balloon.css
@@ -10,7 +10,7 @@
 	left: 20px;
 	z-index: 4;
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 	pointer-events: none;
 }
 
@@ -60,7 +60,7 @@
 
 .balloon-dashboard .stats-container {
 	position: fixed;
-	top: 65px;
+	top: 62px;
 	left: 20px;
 	z-index: 4;
 	display: flex;
@@ -209,7 +209,7 @@
 		left: 10px;
 	}
 	.balloon-dashboard .stats-container {
-		top: 65px;
+		top: 52px;
 		left: 10px;
 	}
 	.balloon-dashboard .bottom-stats-container {
